[aix] os::print_native_callstack should not assert for primordial threadness

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • None
    • b21
    • aix

      On AIX, we cannot run on the primordial thread for a number of reasons. (See JDK-8171505). This was asserted for in os::Aix::query_stack_dimensions; however, that is a bad place for this assert, as it is used when printing the native callstack. It was also unnecessary, as we also already assert this in os::init(), which is the right place to assert this.

      A lot of work went into making the native callstack as robust as possible, so it should not make any asserts it does not really need.

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: