8182864: [aix] os::print_native_callstack should not assert for primordial threadness

Reviewed-by: clanger, mdoerr